feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -7,6 +7,13 @@
   year      = {2017}
 }
 
+@book{bass2012software,
+  title={Software Architecture in Practice},
+  author={Bass, L. and Clements, P. and Kazman, R.},
+  year={2003},
+  publisher={Addison-Wesley}
+}
+
 @misc{axonframework,
   title        = {Axon Framework},
   howpublished = {Dostęp zdalny (07.06.2023): \url{https://docs.axoniq.io/reference-guide}}
