--- a/docs/thesis/tex/3-analiza.tex
+++ b/docs/thesis/tex/3-analiza.tex
@@ -2,9 +2,30 @@
 
 \section{Analiza wymagań systemu}
 
+Przed rozpoczęciem implementacji systemu należy go przeanalizować pod kątem wymagań funkcjonalnych oraz niefunkcjonalnych. Twórca powinien uprzednio poznać występujące rodzaje danych, udostępniane na nich operacje oraz klasy użytkowników.
+
+W systemach o architekturze mikroserwisowej należy również odpowiednio wydzielić serwisy, stanowiące spójną całość.
+
+W tym rozdziale zostaną też przedstawione najważniejsze terminy i pojęcia używane w aplikacji, jej wymagania oraz przypadki użycia.
+
 \subsection{Słownik dziedziny problemu}
 
-XXX
+Słownik najważniejszych pojęć występujących w dziedzinie systemu. W nawiasach podano ich angielskie odpowiedniki, ponieważ w takiej formie zostały one użyte w kodzie aplikacji.
+
+\begin{itemize}
+
+    \item \textbf{Użytkownik zamawiający} (ang. \textit{Ordering User}) - XXX
+    \item \textbf{Restauracja} (ang. \textit{Restaurant}) - XXX
+    \item \textbf{Kurier} (ang. \textit{Courier}) - XXX
+    \item \textbf{Dostawa} (ang. \textit{Order Delivery}) - XXX
+    \item \textbf{Zamówienie} (ang. \textit{Order}) - XXX
+    \item \textbf{Faktura} (ang. \textit{Invoice}) - XXX
+    \item \textbf{Płatność} (ang. \textit{Order Payment}) - XXX
+    \item \textbf{Odbiora płatności} (ang. \textit{Payee}) - XXX
+    \item \textbf{Płatnik} (ang. \textit{Payer}) - XXX
+    \item \textbf{Zamówienie restauracyjne} (ang. \textit{Restaurant Order}) - XXX
+
+\end{itemize}
 
 \subsection{Burza Zdarzeń}
 
