feat(thesis): WIP thesis

--- a/docs/thesis/bibliografia.bib
+++ b/docs/thesis/bibliografia.bib
@@ -266,3 +266,8 @@
   title        = {Strona internetowa biblioteki Locust},
   howpublished = {Dostęp zdalny (24.11.2023): \url{https://locust.io}}
 }
+
+@misc{12factors,
+  title        = {Strona internetowa dwunastu czynników wpływających na jakość oprogramowania},
+  howpublished = {Dostęp zdalny (06.12.2023): \url{https://12factor.net/pl/}}
+}
