--- a/docs/thesis/tex/6-wdrozenie.tex
+++ b/docs/thesis/tex/6-wdrozenie.tex
@@ -2,15 +2,17 @@
 
 \section{Wdrożenie}
 
+\subsection{CI/CD}
+
+\subsection{Repozytorium artefaktów}
+
 \subsection{Konteneryzacja}
 
 Wdrażanie systemów mikroserwisowych z wykorzystaniem Docker i Kubernetes stało się standardem w rozwoju nowoczesnych aplikacji webowych. Docker umożliwia tworzenie lekkich, przenośnych kontenerów dla każdego mikroserwisu, zapewniając izolację i spójność środowiska. Kontenery Docker mogą być następnie zarządzane i orkiestrowane za pomocą Kubernetes, platformy umożliwiającej automatyczne skalowanie, podział ruchu  i samonaprawę. Kubernetes zapewnia także mechanizmy do zarządzania siecią i komunikacji między kontenerami, co jest kluczowe dla sprawnego działania rozproszonych systemów mikroserwisowych.
 
-TODO
-
 \subsection{Orkiestracja kontenerów}
 
-TODO
+\subsection{Skalowanie}
 
 \subsection{Chmura Google Cloud Platform}
 
@@ -20,4 +22,6 @@ Klaster ten złożony jest z trzech maszyn typu e2-standard-4 (4 vCPU, 2 rdzenie
 
 Domyślnie uruchomiono po jednej instancji serwisów obsługujących komendy (Dostawy, Zamówienia, Płatności, Restauracje) oraz po cztery instancje serwisów obsługujących większy ruch niż pozostałe (Zapytania oraz Sagi).
 
-TODO
+\subsection{Monitorowanie}
+
+logi, axon console, axon server dashboard, prometheus, grafana
