--- a/docs/thesis/tex/8-podsumowanie.tex
+++ b/docs/thesis/tex/8-podsumowanie.tex
@@ -2,8 +2,8 @@
 
 \section{Podsumowanie}
 
-XXX
-
 \subsection{Wnioski}
+
+\subsection{Stopień realizacji założeń}
 
 \subsection{Możliwości dalszego rozwoju}
