--- a/docs/thesis/tex/5-implementacja.tex
+++ b/docs/thesis/tex/5-implementacja.tex
@@ -14,8 +14,27 @@ Axon Framework to narzędzie do tworzenia aplikacji w architekturze opartej na z
 
 Axon Server działa jako dedykowany hub do przetwarzania komunikatów i zarządzania zdarzeniami w aplikacjach opartych na Axon Framework. Jako centralny punkt dla komunikacji opartej na zdarzeniach, Axon Server efektywnie zarządza przepływem zdarzeń, poleceń i zapytań między różnymi mikroserwisami. Działa jako serwer zdarzeń i kolejka wiadomości, które są często wykorzystywane w architekturach opartych na zdarzeniach i CQRS, wspierając skalowalność i wydajność aplikacji. Dzięki tej centralizacji, Axon Server umożliwia łatwiejsze zarządzanie, monitorowanie i optymalizację przepływu danych w aplikacjach webowych.
 
-TODO
+\subsubsection{Podział na pakiety}
+
+TODO Wytłumaczyć czemu akurat tak podzieliłem podsekcje
+
+\subsubsection{Warstwa adapterów wejściowych} adapter/in
+
+\subsubsection{Warstwa adapterów wyjściowych} adapter/out
+
+\subsubsection{Warstwa dziedziny} domain/command
+
+\subsubsection{Warstwa prezentacji/zapytań} domain/query
+
+\subsubsection{Warstwa infrastruktury} infrastructure
+
+\subsubsection{Warstwa konfiguracji} config
+
+\subsubsection{Współdzielony kod} shared
+
 
 \subsection{Część kliencka}
 
-XXX
+\subsubsection{Użyte narzędzia?}
+
+\subsubsection{Podział na katalogi}
